--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="favicon.png">
+    <!-- <link rel="canonical" href=""> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    
     <title>Navigable Item List</title>
+    <meta name="description" content="This project allows you to create lists of elements and navigate between each of them through an index and navigation buttons">
+    <meta name="theme-color" content="#272822">
+    <meta property="og:title" content="Navigable Item List">
+    <meta propety="og:description" content="This project allows you to create lists of elements and navigate between each of them through an index and navigation buttons">
+    <meta property="og:image" content="">
+    <meta property="og:url" content="">
+    <meta property="twitter:card" content="summary">
 </head>
 <body>
 
@@ -67,6 +75,7 @@
             <p class="item__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus eos beatae facere magnam quibusdam accusantium eveniet, quia dicta praesentium atque rerum veniam perspiciatis sapiente animi dolorum eaque illum ad placeat!</p>
             <div class="item__content"></div>
         </article>
+        <div class="name">Erik Medina - 2022</div>
     </main>
     <aside class="index">
         <h3 class="index__title">Index</h3>
