--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="apple-touch-icon" href="favicon.png">
-    <!-- <link rel="canonical" href=""> -->
+    <link rel="canonical" href="https://erme07.github.io/Lista-de-elementos-navegables/">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -16,8 +16,8 @@
     <meta name="theme-color" content="#272822">
     <meta property="og:title" content="Navigable Item List">
     <meta propety="og:description" content="This project allows you to create lists of elements and navigate between each of them through an index and navigation buttons">
-    <meta property="og:image" content="">
-    <meta property="og:url" content="">
+    <meta property="og:image" content="https://github.com/erme07/Lista-de-elementos-navegables/blob/84cb2f2d7b70990fab65e04480e6b204a9c2d8b9/img/thumbnaill.jpg">
+    <meta property="og:url" content="https://erme07.github.io/Lista-de-elementos-navegables/">
     <meta property="twitter:card" content="summary">
 </head>
 <body>
