--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="theme-color" content="#272822">
     <meta property="og:title" content="Navigable Item List">
     <meta propety="og:description" content="This project allows you to create lists of elements and navigate between each of them through an index and navigation buttons">
-    <meta property="og:image" content="https://github.com/erme07/Lista-de-elementos-navegables/blob/84cb2f2d7b70990fab65e04480e6b204a9c2d8b9/img/thumbnaill.jpg">
+    <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgES6J7fHDLbj2IP8Cs2uX30rs5rHJ-i7hgYU_YSC8cOdczdO7VUgoBXJfc8uhlaUsvGFP-eV6A7W1_E1ieme-9eI_RjakXUZAjiag-K_lDY84edIC5RAQO9orRPNLWOoq0aeOnDkgxVsYTQFAPyfViy3WefQmwoXupW6yLLg9shtMEtfX4EMTL7C9C/s1600/thumbnaill.jpg">
     <meta property="og:url" content="https://erme07.github.io/Lista-de-elementos-navegables/">
     <meta property="twitter:card" content="summary">
 </head>
