--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
         <h3 class="index__title">Index</h3>
         <div class="index__table"></div>
     </aside>
-    <div id="buttonIndex" class="button button--index" title="Show Index"></div>
-    <div id="buttonTop" class="button button--top" title="Scroll To Top"></div>
-    <div id="buttonNext" class="button button--next" title="Next Item"></div>
-    <div id="buttonPrev" class="button button--prev" title="Previous Item"></div>
+    <div class="button button--index" title="Show Index"></div>
+    <div class="button button--top" title="Scroll To Top"></div>
+    <div class="button button--next" title="Next Item"></div>
+    <div class="button button--prev" title="Previous Item"></div>
     
     <script src="js/script.js"></script>
 </body>
