--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     <meta property="twitter:card" content="summary">
 </head>
 <body>
-
-    <main class="document">
-        <h1 class="document__title">Navigable Item List</h1>
+    <header class="header">
+        <h1 contenteditable="true" placeholder="Navigable Item List" class="document__title"></h1>
         <p class="document__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur asperiores repellat expedita enim iusto, amet minus tenetur maxime qui omnis harum odio molestiae nemo beatae numquam deserunt reiciendis? Sed earum autem blanditiis placeat voluptatem quasi aspernatur, officiis ratione quae, tempore, fugit sapiente enim amet deserunt aut voluptatum quisquam asperiores quis.</p>
+    </header>
+    <main class="document">
         <article class="item" >
             <h2 class="item__title item__title--selected">Item 1</h2>
             <p class="item__description item__description--selected">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus eos beatae facere magnam quibusdam accusantium eveniet, quia dicta praesentium atque rerum veniam perspiciatis sapiente animi dolorum eaque illum ad placeat!</p>
@@ -77,6 +78,8 @@
         </article>
         <div class="name">Erik Medina - 2022</div>
     </main>
+    <nav class="indiceTop index__tablesup">
+    </nav>
     <aside class="index">
         <h3 class="index__title">Index</h3>
         <div class="index__table"></div>
