nueva disposicion del indice

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </head>
 <body>
     <header class="header">
-        <h1 contenteditable="true" placeholder="Navigable Item List" class="document__title"></h1>
-        <p class="document__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur asperiores repellat expedita enim iusto, amet minus tenetur maxime qui omnis harum odio molestiae nemo beatae numquam deserunt reiciendis? Sed earum autem blanditiis placeat voluptatem quasi aspernatur, officiis ratione quae, tempore, fugit sapiente enim amet deserunt aut voluptatum quisquam asperiores quis.</p>
+        <h1 class="document__title">Navigable Item List</h1>
+        <p class="document__description" contenteditable="true" placeholder="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur asperiores repellat expedita enim iusto, amet minus tenetur maxime qui omnis harum odio molestiae nemo beatae numquam deserunt reiciendis? Sed earum autem blanditiis placeat voluptatem quasi aspernatur, officiis ratione quae, tempore, fugit sapiente enim amet deserunt aut voluptatum quisquam asperiores quis.</p>
     </header>
     <main class="document">
         <article class="item" >
@@ -76,15 +76,20 @@
             <p class="item__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus eos beatae facere magnam quibusdam accusantium eveniet, quia dicta praesentium atque rerum veniam perspiciatis sapiente animi dolorum eaque illum ad placeat!</p>
             <div class="item__content"></div>
         </article>
+        <article class="item">
+            <h2 class="item__title">Item 10</h2>
+            <p class="item__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus eos beatae facere magnam quibusdam accusantium eveniet, quia dicta praesentium atque rerum veniam perspiciatis sapiente animi dolorum eaque illum ad placeat!</p>
+            <div class="item__content"></div>
+        </article>
+        <article class="item">
+            <h2 class="item__title">Item 10</h2>
+            <p class="item__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus eos beatae facere magnam quibusdam accusantium eveniet, quia dicta praesentium atque rerum veniam perspiciatis sapiente animi dolorum eaque illum ad placeat!</p>
+            <div class="item__content"></div>
+        </article>
         <div class="name">Erik Medina - 2022</div>
     </main>
-    <nav class="indiceTop index__tablesup">
+    <nav class="index">
     </nav>
-    <aside class="index">
-        <h3 class="index__title">Index</h3>
-        <div class="index__table"></div>
-    </aside>
-    <div class="button button--index" title="Show Index"></div>
     <div class="button button--top" title="Scroll To Top"></div>
     <div class="button button--next" title="Next Item"></div>
     <div class="button button--prev" title="Previous Item"></div>
