--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
         </article>
         <div class="name">Erik Medina - 2022</div>
     </main>
-    <nav class="index">
-    </nav>
+    <nav class="index"></nav>
     <div class="button button--top" title="Scroll To Top"></div>
     <div class="button button--next" title="Next Item"></div>
     <div class="button button--prev" title="Previous Item"></div>
